# SpaNECT

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: config.py  dlpfc1.yaml  tonsil24.yaml
scripts/pipeline/: cortex.py  human_tonsil.py
src/spanect/: SpaNECT.py  __init__.py
src/spanect/characterization/: __init__.py  _modality_weights.py
src/spanect/datasets/: __init__.py  load_data.py
src/spanect/emb/: __init__.py  vision_embed.py
src/spanect/gr/: __init__.py  _pipeline_graph.py  graph.py
src/spanect/model/: encoder.py  frozen_encoder.py  loss_align.py  model_all.py
src/spanect/pl/: __init__.py  _cluster.py  _pipeline_plot.py
src/spanect/pp/: __init__.py  _h5ad_inputs.py  _preprocess.py  _raw_inputs.py
tests/: conftest.py
tests/integration/: test_multi_omics_pipeline.py  test_single_omics_pipeline.py
tests/smoke/: test_characterization_modality_weights_delegation.py  test_characterization_mode.py  test_characterization_workflow.py  test_emb_capability.py  test_gr_build_api.py  test_image_feature.py  test_manual_modular_pipeline_equivalence.py  test_pipeline_and_characterization_together.py  test_pipeline_step_load_graph.py  test_pipeline_train_eval_plot_delegation.py  test_pl_cluster_api.py  test_pp_capability.py  test_tl_graph_ops_api.py  test_tl_pipeline_io_api.py  test_tl_preprocess_api.py
tests/standalone/: test_ch_modality_weights_standalone.py  test_datasets_standalone.py  test_emb_standalone.py  test_gr_standalone.py  test_pl_standalone.py  test_pp_standalone.py  test_tl_standalone.py
(+20 files in other folders)
